# selenium_ex

./: .gitignore  pyproject.toml  scraping_ex  setup.py
src/: fw_pull
src/fw_pull/: __init__.py
tests/: input.json
