[tool.poetry]
name = "fw_pull"
version = "0.1.0"
description = "Pulls vendor BIOS firmware from Dell HP and Oracle"
authors = ["Seth Swanson <seth.swanson@leidos.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
bs4 = "^0.0.1"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
